todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todoapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: todoapp-claim
      containers:
        - name: todoapp
          image: kallepohjanjoki/todo_app:v1.6
          volumeMounts:
            - name: image-cache
              mountPath: /images/
