todo_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todoapp-svc
spec:
  type: ClusterIP
  selector:
    app: todoapp
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 8000
